[gd_scene load_steps=13 format=3 uid="uid://burqt8mt2g2m2"]

[ext_resource type="Script" path="res://NetworkClient.gd" id="1_0swtu"]
[ext_resource type="Script" path="res://Main.gd" id="1_jtfy4"]
[ext_resource type="FontFile" uid="uid://80bd0v6adi1y" path="res://Kenney Pixel.ttf" id="3_c6ncg"]
[ext_resource type="PackedScene" uid="uid://ii16i5jbj1hs" path="res://actor.tscn" id="3_iyd4m"]

[sub_resource type="Image" id="Image_qp7sp"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ruoqy"]
image = SubResource("Image_qp7sp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjkiy"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayf65"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku16k"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mypcp"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="Theme" id="Theme_ej1m2"]
LineEdit/colors/caret_color = Color(0.95, 0.95, 0.95, 1)
LineEdit/colors/clear_button_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/clear_button_color_pressed = Color(1, 1, 1, 1)
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_outline_color = Color(1, 1, 1, 1)
LineEdit/colors/font_placeholder_color = Color(0.875, 0.875, 0.875, 0.6)
LineEdit/colors/font_selected_color = Color(1, 1, 1, 1)
LineEdit/colors/font_uneditable_color = Color(0.875, 0.875, 0.875, 0.5)
LineEdit/colors/selection_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/constants/caret_width = 1
LineEdit/constants/minimum_character_width = 4
LineEdit/constants/outline_size = 0
LineEdit/font_sizes/font_size = 16
LineEdit/fonts/font = ExtResource("3_c6ncg")
LineEdit/icons/clear = SubResource("ImageTexture_ruoqy")
LineEdit/styles/focus = SubResource("StyleBoxFlat_sjkiy")
LineEdit/styles/normal = SubResource("StyleBoxFlat_ayf65")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_ku16k")
RichTextLabel/colors/default_color = Color(1, 1, 1, 1)
RichTextLabel/colors/font_outline_color = Color(1, 1, 1, 1)
RichTextLabel/colors/font_selected_color = Color(0, 0, 0, 0)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 0)
RichTextLabel/colors/selection_color = Color(0.1, 0.1, 1, 0.8)
RichTextLabel/colors/table_border = Color(0, 0, 0, 0)
RichTextLabel/colors/table_even_row_bg = Color(0, 0, 0, 0)
RichTextLabel/colors/table_odd_row_bg = Color(0, 0, 0, 0)
RichTextLabel/constants/line_separation = 0
RichTextLabel/constants/outline_size = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/shadow_outline_size = 1
RichTextLabel/constants/table_h_separation = 3
RichTextLabel/constants/table_v_separation = 3
RichTextLabel/constants/text_highlight_h_padding = 3
RichTextLabel/constants/text_highlight_v_padding = 3
RichTextLabel/font_sizes/bold_font_size = 16
RichTextLabel/font_sizes/bold_italics_font_size = 16
RichTextLabel/font_sizes/italics_font_size = 16
RichTextLabel/font_sizes/mono_font_size = 16
RichTextLabel/font_sizes/normal_font_size = 16
RichTextLabel/fonts/bold_font = ExtResource("3_c6ncg")
RichTextLabel/fonts/bold_italics_font = ExtResource("3_c6ncg")
RichTextLabel/fonts/italics_font = ExtResource("3_c6ncg")
RichTextLabel/fonts/mono_font = ExtResource("3_c6ncg")
RichTextLabel/fonts/normal_font = ExtResource("3_c6ncg")
RichTextLabel/styles/focus = SubResource("StyleBoxFlat_sjkiy")
RichTextLabel/styles/normal = SubResource("StyleBoxEmpty_mypcp")

[sub_resource type="Theme" id="Theme_opaye"]

[node name="Main" type="Node"]
script = ExtResource("1_jtfy4")

[node name="NetworkClient" type="Node" parent="."]
script = ExtResource("1_0swtu")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ej1m2")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme = SubResource("Theme_opaye")
selection_enabled = true

[node name="LineEdit" type="LineEdit" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
caret_blink = true

[node name="Actor" parent="." instance=ExtResource("3_iyd4m")]
position = Vector2(167, 106)

[connection signal="connected" from="NetworkClient" to="." method="_on_network_client_connected"]
[connection signal="disconnected" from="NetworkClient" to="." method="_on_network_client_disconnected"]
[connection signal="error" from="NetworkClient" to="." method="_on_network_client_error"]
[connection signal="received" from="NetworkClient" to="." method="_on_network_client_received"]
[connection signal="text_submitted" from="UI/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
